--- a/init.el.template
+++ b/init.el.template
@@ -7,3 +7,7 @@
 (load-library "modes") ;; mode and configurations
 (load-library "key_bindings") ;; custom key bindings
 (load-library "custom_shell") ;; shell loading and configuration
+
+;; setting up JDEE
+(add-to-list 'load-path "{EMACS_HOME}/lib/jdee/lisp")
+(load "jde")
