--- a/init.el.template
+++ b/init.el.template
@@ -1,3 +1,13 @@
+; turn off mouse interface early in startup to avoid momentary display
+(if (fboundp 'menu-bar-mode) (menu-bar-mode -1))
+(if (fboundp 'tool-bar-mode) (tool-bar-mode -1))
+(if (fboundp 'scroll-bar-mode) (scroll-bar-mode -1))
+
+; no splash screen please
+(setq inhibit-startup-message t)
+
+(setq jde-help-remote-file-exists-function '("beanshell"))
+
 (add-to-list 'load-path "{EMACS_HOME}/lisp/")
 
 (require 'emacs-type)
