start server if not already started

--- a/init.el.template
+++ b/init.el.template
@@ -30,3 +30,7 @@
 ;; setting up JDEE
 (add-to-list 'load-path "{EMACS_HOME}/lib/jdee/lisp")
 (load "jde")
+
+;; start emacs server if not already started
+(load "server")
+(unless (server-running-p) (server-start))
