enable emacs desktop to auto save and restore frames

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ flycheck_*.el
 /.org-id-locations
 /framegeometry
 /request/curl-cookie-jar
+/.emacs.desktop
+/.emacs.desktop.lock
 
 # backup code
 /backup/init.el
